<resources>
    <string name="app_name">Tune</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_song">Songs</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="albumcover">AlbumCover</string>
    <string name="albumCover">albumCover</string>
    <string name="previcon">prevIcon</string>
    <string name="playpausebtn">playPauseBtn</string>
    <string name="nexticon">nextIcon</string>
    <string name="songcover">songCover</string>
    <string name="bckgrdcover">bckgrdCover</string>
</resources>
