<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_que_music"
            android:icon="@drawable/ic_queue_music_24px"
            android:title="Play queue"/>
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/list_icon"
            android:title="Playlist"/>
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/all_music"
            android:title="@string/menu_all_song" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_compact_disc"
            android:title="Genres"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_heart_button"
            android:title="@string/menu_favorites" />

    </group>
    <group android:id="@+id/menu_middle">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="Create Account" />
    </group>
    <group android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info_icon"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
    </group>


</menu>
